--- a/app/src/main/res/layout-land/activity_second.xml
+++ b/app/src/main/res/layout-land/activity_second.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -19,20 +18,18 @@
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/imageViewPoster"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageViewPoster"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="269dp"
+            android:layout_height="329dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/film_poster"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewName"
             tools:srcCompat="@tools:sample/avatars" />
@@ -40,30 +37,31 @@
         <TextView
             android:id="@+id/textViewDsc"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/blood_sport_dsc"
             android:textAlignment="viewStart"
+            app:layout_constraintBottom_toTopOf="@+id/editTextComment"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewPoster" />
+            app:layout_constraintStart_toEndOf="@+id/imageViewPoster"
+            app:layout_constraintTop_toTopOf="@+id/imageViewPoster" />
 
         <CheckBox
             android:id="@+id/checkBoxLike"
-            android:layout_width="110dp"
-            android:layout_height="45dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/like"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDsc" />
+            app:layout_constraintTop_toBottomOf="@+id/imageViewPoster" />
 
         <EditText
             android:id="@+id/editTextComment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:autofillHints=""
@@ -72,7 +70,7 @@
             android:inputType="textShortMessage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/checkBoxLike"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDsc" />
+            app:layout_constraintTop_toBottomOf="@+id/imageViewPoster" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
