--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,169 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewFilms"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:context=".MainActivity">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/imageViewBloodSport"
-                android:layout_width="169dp"
-                android:layout_height="229dp"
-                android:layout_marginStart="8dp"
-                android:adjustViewBounds="true"
-                android:background="@color/white"
-                android:contentDescription="@string/film_poster"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/bloodsport" />
-
-            <TextView
-                android:id="@+id/textViewBloodSport"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:text="@string/blood_sport"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/imageViewBloodSport"
-                app:layout_constraintStart_toStartOf="@+id/imageViewBloodSport"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewBloodSport" />
-
-            <Button
-                android:id="@+id/buttonBloodSport"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/button_details"
-                app:layout_constraintBottom_toBottomOf="@+id/textViewBloodSport"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageViewBloodSport"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/imageViewCocktail"
-                android:layout_width="169dp"
-                android:layout_height="229dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:adjustViewBounds="true"
-                android:background="@color/white"
-                android:contentDescription="@string/film_poster"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBloodSport"
-                app:srcCompat="@drawable/cocktail" />
-
-            <TextView
-                android:id="@+id/textViewCocktail"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:text="@string/cocktail"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/imageViewCocktail"
-                app:layout_constraintStart_toStartOf="@+id/imageViewCocktail"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewCocktail" />
-
-            <Button
-                android:id="@+id/buttonCocktail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/button_details"
-                app:layout_constraintBottom_toBottomOf="@+id/textViewCocktail"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageViewCocktail"
-                app:layout_constraintTop_toTopOf="@+id/imageViewCocktail" />
-
-            <ImageView
-                android:id="@+id/imageViewCommando"
-                android:layout_width="169dp"
-                android:layout_height="229dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:adjustViewBounds="true"
-                android:background="@color/white"
-                android:contentDescription="@string/film_poster"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewCocktail"
-                app:srcCompat="@drawable/commando" />
-
-            <TextView
-                android:id="@+id/textViewCommando"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@color/white"
-                android:text="@string/commando"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/imageViewCommando"
-                app:layout_constraintStart_toStartOf="@+id/imageViewCommando"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewCommando" />
-
-            <Button
-                android:id="@+id/buttonCommando"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/button_details"
-                app:layout_constraintBottom_toBottomOf="@+id/textViewCommando"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageViewCommando"
-                app:layout_constraintTop_toTopOf="@+id/imageViewCommando" />
-
-            <ImageView
-                android:id="@+id/imageViewEmmanuelle"
-                android:layout_width="169dp"
-                android:layout_height="229dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:adjustViewBounds="true"
-                android:background="@color/white"
-                android:contentDescription="@string/film_poster"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewCommando"
-                app:srcCompat="@drawable/emmanuelle" />
-
-            <TextView
-                android:id="@+id/textViewEmmanuelle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:text="@string/emmanuelle"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/imageViewEmmanuelle"
-                app:layout_constraintStart_toStartOf="@+id/imageViewEmmanuelle"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewEmmanuelle" />
-
-            <Button
-                android:id="@+id/buttonEmmanuelle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/button_details"
-                app:layout_constraintBottom_toBottomOf="@+id/textViewEmmanuelle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageViewEmmanuelle"
-                app:layout_constraintTop_toTopOf="@+id/imageViewEmmanuelle" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/buSendMessage"
