--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="@string/favorites" android:id="@+id/menuFavourite"></item>
+    <item
+        android:id="@+id/menuFavourite"
+        android:title="@string/favorites" />
 </menu>
