--- a/app/src/main/res/layout/fragment_film_list.xml
+++ b/app/src/main/res/layout/fragment_film_list.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFilmsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="8dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/buSendMessage"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:contentDescription="@string/send_message"
+        android:focusable="true"
+        android:src="@drawable/ic_baseline_email_24"
+        app:backgroundTint="@color/teal_200"
+        app:tint="@color/white" />
 
 </FrameLayout>
