Изменен способ получения view model для фрагментов Добавлена возможность очистки (удаления) данных из БД. Добавлена возможность повторить загрузку данных при возникновении ошибки в ходе загрузки. Добавлен pull to refresh.

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -27,4 +27,13 @@
         </menu>
     </item>
 
+    <item android:title="@string/utils">
+        <menu>
+            <item
+                android:id="@+id/nav_delete_cache"
+                android:icon="@drawable/ic_baseline_delete_24"
+                android:title="@string/clear_the_cache" />
+        </menu>
+    </item>
+
 </menu>
