--- a/app/src/main/res/layout-land/fragment_film_detail.xml
+++ b/app/src/main/res/layout-land/fragment_film_detail.xml
@@ -26,6 +26,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/white"
                 android:orientation="horizontal"
                 tools:ignore="UseCompoundDrawables">
 
@@ -37,6 +38,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:adjustViewBounds="true"
+                    android:background="@color/white"
                     android:contentDescription="@string/film_poster"
                     app:layout_collapseMode="parallax"
                     tools:srcCompat="@tools:sample/avatars" />
@@ -52,13 +54,6 @@
                     android:textColor="@color/black" />
 
             </LinearLayout>
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
