--- a/app/src/main/res/layout/fragment_film_list.xml
+++ b/app/src/main/res/layout/fragment_film_list.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pullToRefresh"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,3 +15,4 @@
         android:layout_margin="8dp" />
 
 </FrameLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
