--- a/app/src/main/res/layout-land/fragment_film_detail.xml
+++ b/app/src/main/res/layout-land/fragment_film_detail.xml
@@ -104,4 +104,17 @@
 
     </androidx.core.widget.NestedScrollView>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fbuNotify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="8dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:clickable="true"
+        android:focusable="true"
+        app:srcCompat="@drawable/ic_notify_date_24"
+        android:contentDescription="@string/notify_caption"
+        />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
