Добавлена новая таблица Notifications в БД. Добавлены миграции. Реализовано добавление напоминаний в список (таблицу в БД). Реализованы функции редактирования и удаления напоминаний.

--- a/app/src/main/res/layout/fragment_film_detail.xml
+++ b/app/src/main/res/layout/fragment_film_detail.xml
@@ -87,6 +87,7 @@
                     android:autofillHints=""
                     android:ems="10"
                     android:fadingEdge="vertical"
+                    android:textCursorDrawable="@color/colorPrimary"
                     android:hint="@string/comment"
                     android:inputType="textShortMessage"
                     app:layout_constraintEnd_toEndOf="parent"
